Update navbar to other pages

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -12,41 +12,48 @@
   <body>
     <div id="content">
       <!-- Navigation menu -->
-
-      <header class="bg-[--primary] text-white text-center relative z-[10]">
+      <header class="bg-[#f9f9f9] text-white text-center relative z-[10]">
         <nav>
-          <ul class="h-[--header-height] flex flex-row justify-center flex-wrap">
-            <li class="my-0 mx-4">
+          <ul class="flex flex-row justify-center flex-wrap items-center max-h-14 min-h-14">
+            <li>
+              <img src="../src/assets/images/logo.png" alt="" class="max-h-10 pr-4" />
+            </li>
+            <li>
               <a
-                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                role="link"
                 href="../"
                 >Inicio</a
               >
             </li>
-            <li class="my-0 mx-4">
+            <li>
               <a
-                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
-                href="../nosotros"
+                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                role="link"
+                href="../nosotros/"
                 >¿Quiénes Somos?</a
               >
             </li>
-            <li class="my-0 mx-4">
+            <li>
               <a
-                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                role="link"
                 href="../simulador"
                 >Solicita tu Crédito</a
               >
             </li>
-            <li class="my-0 mx-4">
+            <li>
               <a
-                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                role="link"
                 href="../blog"
                 >Blog</a
               >
             </li>
-            <li class="my-0 mx-4">
+            <li>
               <a
-                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                role="link"
                 href="#"
                 >Contacto</a
               >
