--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -14,41 +14,48 @@
   <body>
     <div id="content">
       <!-- Navigation menu -->
-
-      <header class="bg-[--primary] text-white text-center relative z-[10]">
+      <header class="bg-[#f9f9f9] text-white text-center relative z-[10]">
         <nav>
-          <ul class="h-[--header-height] flex flex-row justify-center flex-wrap">
-            <li class="my-0 mx-4">
+          <ul class="flex flex-row justify-center flex-wrap items-center max-h-14 min-h-14">
+            <li>
+              <img src="../src/assets/images/logo.png" alt="" class="max-h-10 pr-4" />
+            </li>
+            <li>
               <a
-                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                role="link"
                 href="../"
                 >Inicio</a
               >
             </li>
-            <li class="my-0 mx-4">
+            <li>
               <a
-                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                role="link"
                 href="#"
                 >¿Quiénes Somos?</a
               >
             </li>
-            <li class="my-0 mx-4">
+            <li>
               <a
-                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                role="link"
                 href="../simulador"
                 >Solicita tu Crédito</a
               >
             </li>
-            <li class="my-0 mx-4">
+            <li>
               <a
-                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                role="link"
                 href="../blog"
                 >Blog</a
               >
             </li>
-            <li class="my-0 mx-4">
+            <li>
               <a
-                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                role="link"
                 href="../contacto"
                 >Contacto</a
               >
@@ -66,10 +73,9 @@
               <div>
                 <h2 class="text-[2.5rem] font-light">Nuestra Misión</h2>
                 <p class="text-[1.25rem] font-light leading-[1.5]">
-                  En <strong>CrediPro</strong> estamos comprometidos con brindarte una solución
-                  financiera ágil, clara y accesible. Nuestra misión es ayudarte a cumplir tus metas
-                  a través de créditos de nómina diseñados especialmente para trabajadores del
-                  gobierno.
+                  En <strong>CrediPro</strong> estamos comprometidos con brindarte una solución financiera
+                  ágil, clara y accesible. Nuestra misión es ayudarte a cumplir tus metas a través de créditos
+                  de nómina diseñados especialmente para trabajadores del gobierno.
                 </p>
               </div>
               <div class="picture max-w-360px">
@@ -87,10 +93,10 @@
               <div>
                 <h2 class="text-[2.5rem] font-light">¿Qué hacemos?</h2>
                 <p class="text-[1.25rem] font-light leading-[1.5]">
-                  Gestionamos tu crédito desde el inicio hasta que lo recibes. Te asesoramos
-                  personalmente y nos encargamos de los trámites para que tú te enfoques en lo que
-                  realmente importa. Colaboramos con instituciones financieras de prestigio para
-                  garantizarte opciones confiables y competitivas.
+                  Gestionamos tu crédito desde el inicio hasta que lo recibes. Te asesoramos personalmente y
+                  nos encargamos de los trámites para que tú te enfoques en lo que realmente importa.
+                  Colaboramos con instituciones financieras de prestigio para garantizarte opciones confiables
+                  y competitivas.
                 </p>
               </div>
               <div class="picture max-w-360px">
@@ -146,8 +152,8 @@
                 <h2 class="text-[2.5rem] font-light">¿A quién ayudamos?</h2>
                 <p class="text-[1.25rem] font-light leading-[1.5]">
                   Nos enfocamos en apoyar a
-                  <strong>trabajadores del gobierno</strong> que buscan una opción de financiamiento
-                  sin complicaciones. Entendemos sus necesidades y diseñamos soluciones a su medida.
+                  <strong>trabajadores del gobierno</strong> que buscan una opción de financiamiento sin
+                  complicaciones. Entendemos sus necesidades y diseñamos soluciones a su medida.
                 </p>
               </div>
               <div class="picture max-w-360px">
@@ -182,8 +188,7 @@
                   </li>
                   <li>
                     <p class="text-[1.25rem] font-light leading-[1.5]">
-                      No estás solo: te acompañamos desde el primer contacto hasta que recibes tu
-                      crédito.
+                      No estás solo: te acompañamos desde el primer contacto hasta que recibes tu crédito.
                     </p>
                   </li>
                 </ul>
