--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Credipro - Tu Crédito Fácil y Rápido</title>
+    <title>CrediPRO - Tu Crédito Fácil y Rápido</title>
     <link rel="stylesheet" href="src/styles/global.css" />
     <link rel="icon" type="image/png" href="src/assets/images/CREDIPROLOGO.png" />
     <link rel="icon" type="image/x-icon" href="src/assets/images/CREDIPROLOGO.png" />
@@ -48,7 +48,7 @@
             </li>
             <li>
               <a
-                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                class="text-[13px] font-[montserrat-semibold] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800 font-semibold"
                 role="link"
                 href="/"
                 >Inicio</a
@@ -99,8 +99,9 @@
               class="flex flex-row justify-around items-center h-[calc(100vh_-_3rem)] max-w-[80%] overflow-hidden mx-auto"
             >
               <div class="slide flex flex-col items-center justify-center min-w-full">
-                <h2 class="text-white font-bold text-[2rem] font-[montserrat-bold] text-center">
-                  CREDIPRO te ayuda a cumplir tus metas
+                <h2 class="text-white font-semibold text-[2rem] font-[montserrat-semibold] text-center">
+                  <strong class="font-bold font-[montserrat-bold]">CrediPRO</strong> te ayuda a cumplir tus
+                  metas
                 </h2>
                 <img src="https://www.credipro.mx/images/step1-white.png" alt="" class="max-w-[128px]" />
                 <h3 class="text-[2rem] text-white font-semibold font-[montserrat-semibold] text-center">
@@ -109,7 +110,7 @@
               </div>
               <div class="slide flex flex-col items-center justify-center min-w-full">
                 <h2 class="text-white font-bold text-[2rem] font-[montserrat-bold] text-center">
-                  Avanzamos juntos con CREDIPRO
+                  Avanzamos juntos con CrediPRO
                 </h2>
                 <img src="https://www.credipro.mx/images/step5.png" alt="" class="max-w-[128px]" />
                 <h3 class="text-[2rem] text-white font-semibold font-[montserrat-semibold] text-center">
@@ -118,7 +119,7 @@
               </div>
               <div class="slide flex flex-col items-center justify-center min-w-full">
                 <h2 class="text-white font-bold text-[2rem] font-[montserrat-bold] text-center">
-                  "Compré mi casa gracias a CREDIPRO"
+                  "Compré mi casa gracias a CrediPRO"
                 </h2>
                 <img src="https://www.credipro.mx/images/step3.png" alt="" class="max-w-[128px]" />
                 <h3 class="text-[2rem] text-white font-semibold font-[montserrat-semibold] text-center">
@@ -136,7 +137,7 @@
                   Tu crédito, sin complicaciones
                 </h2>
                 <p class="font-[montserrat] text-[1.25rem] text-slate-600 block mb-6">
-                  En CREDIPRO estamos para ayudarte a dar ese paso que necesitas. Solicita tu crédito de
+                  En CrediPRO estamos para ayudarte a dar ese paso que necesitas. Solicita tu crédito de
                   nómina de forma rápida, segura y sin estrés.
                 </p>
                 <a
@@ -163,7 +164,7 @@
                   ¿Quiénes somos?
                 </h2>
                 <p class="font-[montserrat] text-[1.25rem] text-slate-600 block mb-6">
-                  En <strong class="font-bold font-[montserrat-bold]">CREDIPRO</strong> nos especializamos en
+                  En <strong class="font-bold font-[montserrat-bold]">CrediPRO</strong> nos especializamos en
                   gestionar <strong>créditos de nómina para trabajadores del gobierno</strong>, brindando una
                   experiencia ágil, clara y sin complicaciones. Te acompañamos desde la asesoría inicial hasta
                   que recibes tu crédito, colaborando con instituciones financieras líderes para brindarte
@@ -299,7 +300,7 @@
                     class="flex items-center px-8 max-w-max py-4 rounded-md ml-auto bg-blue-500 text-white font-medium font-[montserrat-medium] hover:bg-blue-600 transition-all"
                     type="submit"
                   >
-                    Enviar y contactar
+                    Enviar mensaje
                   </button>
                 </form>
               </div>
@@ -308,6 +309,17 @@
               alt="contact-us" />
             </div>
           </div>
+        </section>
+        <section style="border-top: 1px solid #3d3d3d1d">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28822.01587240633!2d-101.02044328307028!3d25.446554042883374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86886d50f00cafb1%3A0x59bbe09517b08121!2sCredipro!5e0!3m2!1sen!2smx!4v1749349426539!5m2!1sen!2smx"
+            width="100%"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </section>
       </main>
 
