--- a/simulador/index.html
+++ b/simulador/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Credipro - Tu Crédito Fácil y Rápido</title>
+    <title>CrediPRO - Tu Crédito Fácil y Rápido</title>
     <link rel="stylesheet" href="../src/styles/global.css" />
     <link rel="icon" type="image/png" href="../src/assets/images/CREDIPROLOGO.png" />
     <link rel="icon" type="image/x-icon" href="../src/assets/images/CREDIPROLOGO.png" />
@@ -36,7 +36,7 @@
             </li>
             <li>
               <a
-                class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
+                class="text-[13px] font-semibold font-[montserrat-semibold] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
                 role="link"
                 href="#"
                 >Solicita tu Crédito</a
@@ -125,11 +125,64 @@
             </div>
           </div>
         </section>
+        <!--contacto-->
+        <section id="contacto" class="w-screen py-8 bg-white">
+          <div class="w-full max-w-[64rem] my-8 mx-auto block">
+            <div class="flex flex-row justify-between items-center gap-x-4">
+              <div class="w-full">
+                <h2
+                  class="font-semibold font-[montserrat-semibold] text-[2rem] text-slate-700 mb-6 text-center"
+                >
+                  Contáctanos
+                </h2>
+                <form class="space-y-4 w-full">
+                  <label for="fullname" class="text-[14px] font-medium font-[montserrat-medium]">
+                    Nombre completo
+                    <input type="text" placeholder="Nombre completo" id="fullname" name="fullname" required />
+                  </label>
+                  <label for="email" class="text-[14px] font-medium font-[montserrat-medium]" required>
+                    Correo electrónico
+                    <input type="email" placeholder="Correo electrónico" id="email" name="email" required />
+                  </label>
+                  <label for="message" class="text-[14px] font-medium font-[montserrat-medium]">
+                    Cuerpo del mensaje
+                    <textarea
+                      placeholder="Escríbenos tu mensaje"
+                      rows="8"
+                      class="block w-full"
+                      id="message"
+                      name="message"
+                    ></textarea>
+                  </label>
+                  <button
+                    class="flex items-center px-8 max-w-max py-4 rounded-md ml-auto bg-blue-500 text-white font-medium font-[montserrat-medium] hover:bg-blue-600 transition-all"
+                    type="submit"
+                  >
+                    Enviar mensaje
+                  </button>
+                </form>
+              </div>
+              <img class="block w-[480px] min-[480px]" style="mix-blend-mode: multiply;""
+              src="https://img.freepik.com/free-psd/portrait-middle-aged-woman_23-2151825943.jpg"
+              alt="contact-us" />
+            </div>
+          </div>
+        </section>
+        <section style="border-top: 1px solid #3d3d3d1d">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28822.01587240633!2d-101.02044328307028!3d25.446554042883374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86886d50f00cafb1%3A0x59bbe09517b08121!2sCredipro!5e0!3m2!1sen!2smx!4v1749349426539!5m2!1sen!2smx"
+            width="100%"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </section>
       </main>
 
-      <!--Footer-->
-      <footer class="bg-[--primary] text-white text-center p-4">
-        <p id="copyright"></p>
+      <footer class="bg-[#262626] flex flex-row items-center text-white min-h-14">
+        <p id="copyright" class="mx-auto"></p>
       </footer>
     </div>
   </body>
