--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a
                 class="text-[13px] font-[montserrat-semibold] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800 font-semibold"
                 role="link"
-                href="/"
+                href="#"
                 >Inicio</a
               >
             </li>
@@ -58,7 +58,7 @@
               <a
                 class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
                 role="link"
-                href="/nosotros"
+                href="./nosotros/index.html"
                 >¿Quiénes Somos?</a
               >
             </li>
@@ -66,7 +66,7 @@
               <a
                 class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
                 role="link"
-                href="/simulador"
+                href="./simulador/index.html"
                 >Solicita tu Crédito</a
               >
             </li>
