--- a/contacto/index.html
+++ b/contacto/index.html
@@ -30,7 +30,7 @@
               <a
                 class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
                 role="link"
-                href="../nosotros/"
+                href="../nosotros"
                 >¿Quiénes Somos?</a
               >
             </li>
