--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a
                 class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
                 role="link"
-                href="./nosotros/index.html"
+                href="./nosotros"
                 >¿Quiénes Somos?</a
               >
             </li>
@@ -66,7 +66,7 @@
               <a
                 class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
                 role="link"
-                href="./simulador/index.html"
+                href="./simulador"
                 >Solicita tu Crédito</a
               >
             </li>
@@ -74,7 +74,7 @@
               <a
                 class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
                 role="link"
-                href="/blog"
+                href="./blog"
                 >Blog</a
               >
             </li>
@@ -82,7 +82,7 @@
               <a
                 class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
                 role="link"
-                href="/contacto"
+                href="./contacto"
                 >Contacto</a
               >
             </li>
