--- a/simulador/index.html
+++ b/simulador/index.html
@@ -46,7 +46,7 @@
               <a
                 class="text-[13px] font-[montserrat-medium] block h-14 px-5 flex items-center hover:bg-slate-200 text-slate-800"
                 role="link"
-                href="/blog"
+                href="../blog"
                 >Blog</a
               >
             </li>
